--- a/Guided Tour of Machine Learning in Finance/Euclidian_Distance_m1_ex1_v4-newV.ipynb
+++ b/Guided Tour of Machine Learning in Finance/Euclidian_Distance_m1_ex1_v4-newV.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -100,19 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "COURSERA_TOKEN = \" \"# the key provided to the Student under his/her email on submission page\n",
-    "COURSERA_EMAIL = \" \"# the email"
+    "COURSERA_TOKEN = \"r2iWGacgHJubKHki\"# the key provided to the Student under his/her email on submission page\n",
+    "COURSERA_EMAIL = \"dennislcv1@gmail.com \"# the email"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -205,11 +205,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X:  [[ 0.09220363  0.85065196  0.90075012  0.59361319  0.84875299]\n",
+      " [ 0.13300259  0.50209599  0.76796562  0.92047036  0.47544869]\n",
+      " [ 0.72927521  0.8054414   0.4002669   0.01355402  0.31719426]\n",
+      " ..., \n",
+      " [ 0.82071112  0.46084335  0.92036074  0.31746465  0.03535725]\n",
+      " [ 0.21581585  0.12317179  0.42738517  0.35466096  0.93360429]\n",
+      " [ 0.84577044  0.67545711  0.22706133  0.58893715  0.98216918]]\n",
+      "Y:  [[ 0.32900813  0.34963352  0.52804383  0.38208285  0.03237214]\n",
+      " [ 0.11760546  0.46402303  0.12260294  0.18876132  0.99071561]\n",
+      " [ 0.49587495  0.18125864  0.61421199  0.29089588  0.71308158]\n",
+      " ..., \n",
+      " [ 0.14440936  0.38925149  0.50634999  0.29421895  0.96282509]\n",
+      " [ 0.15239208  0.4741476   0.84900715  0.70515312  0.22175127]\n",
+      " [ 0.46490389  0.50546926  0.04574762  0.75900819  0.25636212]]\n"
+     ]
+    }
+   ],
    "source": [
     "lower_boundary = 0\n",
     "upper_boundary = 1\n",
@@ -244,15 +265,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running time:  0.6263489089906216\n"
+     ]
+    }
+   ],
    "source": [
     "start = timeit.default_timer()\n",
     "### START CODE HERE ### (≈ 4 lines of code)\n",
     "# implement a loop which computes Euclidean distances between each element in X and Y\n",
     "# store results in euclidean_distances_vector_l list\n",
-    "\n",
+    "euclidean_distances_vector_l = [euclidean_distances(X[i].reshape(1,-1),Y[i].reshape(1,-1))[0][0] for i in range(sample_size)]\n",
     "### END CODE HERE ###\n",
     "stop = timeit.default_timer()\n",
     "print( 'Running time: ', stop-start )"
@@ -260,9 +289,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission successful, please check on the coursera grader page for the status\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.87662633,  0.06098537, -0.03504537, -0.26237711])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Filename: SklearnDistance, PART: pmqxU\n",
     "### GRADED PART (DO NOT EDIT) ###\n",
@@ -280,11 +327,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expectation of Euclidean distances:  0.876626326649 \n",
+      "\n",
+      "Variance of Euclidean distances:  0.0609853651691 \n",
+      "\n",
+      "Skewness of Euclidean distances:  -0.0350453681886 \n",
+      "\n",
+      "Kurtosis of Euclidean distances:  -0.262377106269 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print_stats(result)\n",
     "plot_distribution(euclidean_distances_vector_l, result, n)\n",
@@ -303,11 +363,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running time:  0.07926481403410435\n"
+     ]
+    }
+   ],
    "source": [
     "# using vectorization by calculating inner product\n",
     "start = timeit.default_timer()\n",
@@ -316,7 +382,8 @@
     "### START CODE HERE ### (≈ 3 lines of code)\n",
     "# compute Euclidean distances between each element in X and Y using (vectorized implementation)\n",
     "# store results in euclidean_distances_vector_v \n",
-    "\n",
+    "for i in range(sample_size):\n",
+    "    euclidean_distances_vector_l_vectorized.append(np.sqrt(sum(X[i]*X[i])-2*sum(X[i]*Y[i])+sum(Y[i]*Y[i])))\n",
     "\n",
     "### END CODE HERE ###\n",
     "stop = timeit.default_timer()\n",
@@ -325,11 +392,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission successful, please check on the coursera grader page for the status\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.87662633,  0.06098537, -0.03504537, -0.26237711])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Filename: VectorizedDistance, PART: VrXL6\n",
     "### GRADED PART (DO NOT EDIT) ### \n",
@@ -347,11 +430,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expectation of Euclidean distances:  0.876626326649 \n",
+      "\n",
+      "Variance of Euclidean distances:  0.0609853651691 \n",
+      "\n",
+      "Skewness of Euclidean distances:  -0.0350453681886 \n",
+      "\n",
+      "Kurtosis of Euclidean distances:  -0.262377106269 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print_stats(result)\n",
     "fig = plot_distribution(euclidean_distances_vector_l_vectorized, result, n)\n",
@@ -371,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -401,7 +497,9 @@
     "    euclidean_distances_vector_v = []\n",
     "    ### START CODE HERE ### (≈ 7-10 lines of code)\n",
     "    # store results in euclidean_distances_vector_v\n",
-    "\n",
+    "    X = np.random.uniform(lower_boundary,upper_boundary, size = (sample_size,dim_space))\n",
+    "    Y = np.random.uniform(lower_boundary,upper_boundary, size = (sample_size,dim_space))\n",
+    "    euclidean_distances_vector_v = [euclidean_distances(X[i].reshape(1,-1),Y[i].reshape(1,-1))[0][0] for i in range(sample_size)]\n",
     "    ### END CODE HERE ###\n",
     "    stats_result = euclidean_distances_stats(euclidean_distances_vector_v)\n",
     "    return tuple(stats_result.tolist())"
@@ -409,11 +507,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating finished for sample size = 10000, dimension = 2\n",
+      "\n",
+      "Calculating finished for sample size = 10000, dimension = 5\n",
+      "\n",
+      "Calculating finished for sample size = 10000, dimension = 10\n",
+      "\n",
+      "Calculating finished for sample size = 10000, dimension = 20\n",
+      "\n",
+      "Calculating finished for sample size = 10000, dimension = 40\n",
+      "\n",
+      "Calculating finished for sample size = 10000, dimension = 60\n",
+      "\n",
+      "Calculating finished for sample size = 10000, dimension = 80\n",
+      "\n",
+      "Calculating finished for sample size = 10000, dimension = 100\n",
+      "\n",
+      "Calculating finished for sample size = 10000, dimension = 200\n",
+      "\n",
+      "Calculating finished for sample size = 10000, dimension = 400\n",
+      "\n",
+      "Calculating finished for sample size = 10000, dimension = 600\n",
+      "\n",
+      "Calculating finished for sample size = 10000, dimension = 800\n",
+      "\n",
+      "Calculating finished for sample size = 10000, dimension = 1000\n",
+      "\n",
+      "Running time:  8.46495697600767\n"
+     ]
+    }
+   ],
    "source": [
     "start = timeit.default_timer()\n",
     "\n",
@@ -447,11 +577,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission successful, please check on the coursera grader page for the status\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.5244117684024785,\n",
+       " 0.8822841161864812,\n",
+       " 1.2676717606162842,\n",
+       " 1.8110504380007288,\n",
+       " 2.5684460728327534,\n",
+       " 3.1487610877583165,\n",
+       " 3.6439685301909495,\n",
+       " 4.073344650824303,\n",
+       " 5.768449828048197,\n",
+       " 8.160150803731382,\n",
+       " 9.997217189326257,\n",
+       " 11.543203181243685,\n",
+       " 12.906928018524365]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Filename : DistancesMean, PART: XsLp1\n",
     "### GRADED PART (DO NOT EDIT) ###\n",
@@ -468,11 +626,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission successful, please check on the coursera grader page for the status\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.06230677292748971,\n",
+       " 0.06119807955578971,\n",
+       " 0.0608126495018327,\n",
+       " 0.059183678488410246,\n",
+       " 0.05949007814616248,\n",
+       " 0.05725268125796696,\n",
+       " 0.0593545215848642,\n",
+       " 0.05831142832530561,\n",
+       " 0.05928563431624706,\n",
+       " 0.059076129472239725,\n",
+       " 0.0576298549016931,\n",
+       " 0.0591749275653076,\n",
+       " 0.058159905961032675]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Filename: DistancesVariance, PART jD7SY\n",
     "### GRADED PART (DO NOT EDIT) ###\n",
@@ -489,11 +675,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission successful, please check on the coursera grader page for the status\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.19887686461523602,\n",
+       " -0.021074633737255315,\n",
+       " -0.05749817620192317,\n",
+       " -0.07189621539115594,\n",
+       " -0.006116609407693547,\n",
+       " -0.023983251393225675,\n",
+       " -0.052045570155267055,\n",
+       " -0.018424595473803547,\n",
+       " -0.004037890673924885,\n",
+       " -0.020853349346522377,\n",
+       " -0.014025628984911586,\n",
+       " 0.029458241353260514,\n",
+       " -0.04396638054086972]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Filename:  DistancesSkewness, PART: Ad4J0\n",
     "### GRADED PART (DO NOT EDIT) ###\n",
@@ -510,11 +724,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission successful, please check on the coursera grader page for the status\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[-0.6384013133225133,\n",
+       " -0.27584397346027956,\n",
+       " -0.1522323307803326,\n",
+       " -0.07988375526844216,\n",
+       " -0.010447691485871324,\n",
+       " -0.08064860279897523,\n",
+       " -0.02331335574782578,\n",
+       " -0.02016666725263594,\n",
+       " 0.10669665209383972,\n",
+       " -0.05369066310062687,\n",
+       " 0.024930971487185705,\n",
+       " 0.0030753520505761855,\n",
+       " 0.06775391815498599]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Filename: DistancesKurtosis, PART: 1nPFm\n",
     "### GRADED PART (DO NOT EDIT) ###\n",
@@ -531,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -574,6 +816,15 @@
     "    matplotlib.pyplot.show()\n",
     "except: pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
