--- a/Guided Tour of Machine Learning in Finance/linear_regress_m1_ex2_v4-newV.ipynb
+++ b/Guided Tour of Machine Learning in Finance/linear_regress_m1_ex2_v4-newV.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -83,19 +83,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "COURSERA_TOKEN = # the key provided to the Student under his/her email on submission page\n",
-    "COURSERA_EMAIL = # the email"
+    "COURSERA_TOKEN = \"Yq4cLwqSFZ3LFGXL\"# the key provided to the Student under his/her email on submission page\n",
+    "COURSERA_EMAIL = \"dennislcv1@gmail.com\"# the email"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -158,11 +158,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((7500, 3), (7500, 1))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def generate_data(n_points=10000, n_features=3, use_nonlinear=True, \n",
     "                    noise_std=0.1, train_test_split = 4):\n",
@@ -228,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -249,9 +258,10 @@
     "    ### START CODE HERE ### (≈ 3 lines of code)\n",
     "    \n",
     "    # number of features\n",
-    "    \n",
+    "    observations = X_train.shape[0]\n",
     "    # add the column of ones\n",
-    "\n",
+    "    X_new = np.concatenate((np.ones((observations,1)),X_train),axis = 1)\n",
+    "    theta_numpy = np.linalg.inv(np.dot(X_new.T,X_new)).dot(X_new.T).dot(Y_train).reshape(-1,1)\n",
     "    \n",
     "    # default answer, replace this\n",
     "    # theta_numpy = np.array([0.] * (ndim + 1)) \n",
@@ -261,11 +271,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission successful, please check on the coursera grader page for the status\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.99946227,  0.99579039,  0.499198  ,  0.20019798])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### GRADED PART (DO NOT EDIT) ###\n",
     "theta_numpy = numpy_lin_regress(X_train, Y_train)\n",
@@ -289,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -310,18 +336,35 @@
     "    lin_reg = LinearRegression()\n",
     "    ### START CODE HERE ### (≈ 3 lines of code)\n",
     "    # use lin_reg to fit training data\n",
-    "\n",
+    "    lin_reg.fit(X_train, Y_train)\n",
+    "    theta_sklearn = np.append(lin_reg.intercept_,lin_reg.coef_).reshape(-1,1)\n",
     "    ### END CODE HERE ###\n",
     "    return theta_sklearn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission successful, please check on the coursera grader page for the status\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.99946227,  0.99579039,  0.499198  ,  0.20019798])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### GRADED PART (DO NOT EDIT) ###\n",
     "theta_sklearn = sklearn_lin_regress(X_train, Y_train)\n",
@@ -345,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -364,9 +407,12 @@
     "    \"\"\"\n",
     "    ### START CODE HERE ### (≈ 7-8 lines of code)\n",
     "    # add the column of ones\n",
-    "    \n",
+    "    X_new = np.hstack((np.ones((X_train.shape[0],1)),X_train))\n",
     "    # define theta for later evaluation\n",
-    "\n",
+    "    X = tf.constant(X_new, dtype = tf.float32, name ='X')\n",
+    "    y = tf.constant(Y_train, dtype = tf.float32, name ='y')\n",
+    "    XT = tf.transpose(X)\n",
+    "    theta = tf.matmul(tf.matmul(tf.matrix_inverse(tf.matmul(XT,X)),XT),y)\n",
     "    ### END CODE HERE ###\n",
     "    with tf.Session() as sess:\n",
     "        theta_value = theta.eval()\n",
@@ -375,11 +421,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission successful, please check on the coursera grader page for the status\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.99946201,  0.99579054,  0.49919799,  0.20019798], dtype=float32)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### GRADED PART (DO NOT EDIT) ###\n",
     "theta_tf = tf_lin_regress(X_train, Y_train)\n",
@@ -396,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -459,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -492,9 +554,23 @@
     "\n",
     "    ### START CODE HERE ### (≈ 10-15 lines of code)\n",
     "    # train the model\n",
-    "\n",
+    "    with tf.Session() as sess:\n",
+    "        sess.run(tf.global_variables_initializer())\n",
     "        # Normal equation for Linear Regression\n",
-    "        \n",
+    "        theta_value = sess.run(model.theta, feed_dict ={\n",
+    "            model.X: X_train,\n",
+    "            model.Y: Y_train\n",
+    "        })\n",
+    "        lr_mse_train = sess.run(model.lr_mse, feed_dict ={\n",
+    "            model.X: X_train,\n",
+    "            model.Y: Y_train,\n",
+    "            model.theta_in: theta_value\n",
+    "        })\n",
+    "        lr_mse_test = sess.run(model.lr_mse, feed_dict ={\n",
+    "            model.X: X_test,\n",
+    "            model.Y: Y_test,\n",
+    "            model.theta_in: theta_value\n",
+    "        })\n",
     "        \n",
     "        \n",
     "    ### END CODE HERE ###\n",
@@ -507,11 +583,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission successful, please check on the coursera grader page for the status\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.99946201,  0.99579054,  0.49919799,  0.20019798], dtype=float32)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### GRADED PART (DO NOT EDIT) ###\n",
     "part_4 = list(theta_value.squeeze())\n",
@@ -527,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -582,11 +674,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission successful, please check on the coursera grader page for the status\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.99862021,  0.9949457 ,  0.49861497,  0.20076911], dtype=float32)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### GRADED PART (DO NOT EDIT) ###\n",
     "part_5 = list(weights.squeeze())\n",
@@ -599,11 +707,19 @@
     "weights.squeeze()\n",
     "### GRADED PART (DO NOT EDIT) ###"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
-  "celltoolbar": "Edit Metadata",
   "coursera": {
    "course_slug": "guided-tour-machine-learning-finance"
   },
